Updated to deploy containers to GHCR & ECR

--- a/github-to-s3/Makefile
+++ b/github-to-s3/Makefile
@@ -1,6 +1,7 @@
 VERSION=1.0.0
 
 REGISTRY_DOCKER_PREFIX=jdrydn/github-to-s3
+REGISTRY_ECR_PREFIX=public.ecr.aws/i1t9c1k5/github-to-s3
 REGISTRY_GITHUB_PREFIX=ghcr.io/someimportantcompany/github-to-s3
 
 # Build a test image - which will also check versions of installed packages
@@ -15,5 +16,6 @@ deploy:
 		--platform linux/amd64,linux/arm64 \
 		--file ./Dockerfile \
 		--tag $(REGISTRY_DOCKER_PREFIX):$(VERSION) --tag $(REGISTRY_DOCKER_PREFIX):latest \
+		--tag $(REGISTRY_ECR_PREFIX):$(VERSION) --tag $(REGISTRY_ECR_PREFIX):latest \
 		--tag $(REGISTRY_GITHUB_PREFIX):$(VERSION) --tag $(REGISTRY_GITHUB_PREFIX):latest \
 		.
